4 November 2016: Ralph
	- Added stub-ssl-upstream and forward-ssl-upstream options.

4 November 2016: Wouter
	- configure detects ssl security level API function in the autoconf
	  manner.  Every function on its own, so that other libraries (eg.
	  LibreSSL) can develop their API without hindrance.
	- Fix #1154: segfault when reading config with duplicate zones.

3 November 2016: Ralph
	- Set OpenSSL security level to 0 when using aNULL ciphers.

3 November 2016: Wouter
	- .gitattributes line for githubs code language display.
	- log-identity: config option to set sys log identity, patch from
	  "Robin H. Johnson" <robbat2@gentoo.org>

2 November 2016: Wouter
	- iana portlist update.

31 October 2016: Wouter
	- Fix failure to build on arm64 with no sbrk.
	- iana portlist update.

28 October 2016: Wouter
	- Patch for server.num.zero_ttl stats for count of expired replies,
	  from Pavel Odintsov.

26 October 2016: Wouter
	- Fix unit tests for openssl 1.1, with no DSA, by faking DSA, enabled
	  with the undocumented switch 'fake-dsa'.  It logs a warning.

25 October 2016: Wouter
	- Fix #1134: unbound-control set_option -- val-override-date: -1 works
	  immediately to ignore datetime, or back to 0 to enable it again.
	  The -- is to ignore the '-1' as an option flag.

24 October 2016: Wouter
	- serve-expired config option: serve expired responses with TTL 0.
	- g.root-servers.net has AAAA address.

21 October 2016: Wouter
	- Ported tests for local_cname unit test to testbound framework.

20 October 2016: Wouter
	- suppress compile warning in lex files.
	- init lzt variable, for older gcc compiler warnings.
	- fix --enable-dsa to work, instead of copying ecdsa enable.
	- Fix DNSSEC validation of query type ANY with DNAME answers.
	- Fixup query_info local_alias init.

19 October 2016: Wouter
	- Fix #1130: whitespace in example.conf.in more consistent.

18 October 2016: Wouter
	- Patch that resolves CNAMEs entered in local-data conf statements that