@@ -6,6 +6,8 @@
 	  manner.  Every function on its own, so that other libraries (eg.
 	  LibreSSL) can develop their API without hindrance.
 	- Fix #1154: segfault when reading config with duplicate zones.
+	- Note that for harden-below-nxdomain the nxdomain must be secure,
+	  this means nsec3 with optout is insufficient.
 
 3 November 2016: Ralph
 	- Set OpenSSL security level to 0 when using aNULL ciphers.
